--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,20 @@
 
     <Button
         android:id="@+id/main_addButton"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_recyclerView"
+        android:layout_margin="50dp"
         android:layout_centerHorizontal="true"
         android:text="Ajouter un nouveau cursus" />
+
+    <Button
+        android:id="@+id/main_resetButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/main_addButton"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="50dp"
+        android:text="Réinitialiser la liste de cursus" />
 
 </RelativeLayout>
