[CursUTT] Add converters for SemestreEntity and change newsemestre activity for a simpler use

--- a/app/src/main/res/layout/activity_new_semestre.xml
+++ b/app/src/main/res/layout/activity_new_semestre.xml
@@ -15,14 +15,11 @@
         android:text="Vos UEs:"
         />
 
-    <androidx.recyclerview.widget.RecyclerView
+    <!--<androidx.recyclerview.widget.RecyclerView
         android:id="@+id/newSemestre_recyclerViewUEs"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_margin="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content" />-->
 
     <TextView
         android:id="@+id/newSemestre_tvRecap"
@@ -129,7 +126,7 @@
         android:id="@+id/newSemestre_tvSearch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rechercher une UE"
+        android:text="Rechercher et créer un module"
         android:paddingTop="10dp"
         />
 
@@ -140,95 +137,89 @@
         android:orientation="horizontal">
 
         <EditText
-            android:id="@+id/newSemestre_search_etSigleUE"
+            android:id="@+id/newSemestre_etSigleUE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="10dp"
-            android:hint="Sigle de l'UE"/>
+            android:hint="Sigle du module"/>
 
         <Spinner
-            android:id="@+id/newSemestre_search_spinnerTypeUE"
+            android:id="@+id/newSemestre_spinnerTypeUE"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
-        <Spinner
-            android:id="@+id/newSemestre_search_spinnerBranche"
+        <EditText
+            android:id="@+id/newSemestre_etCreditsUE"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:textSize="10dp"
+            android:hint="Credits du module"/>
+
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/newSemestre_recycler"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        />
 
     <!-- Boutons rechercher et ajouter -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/newSemestre_search_btnSearch"
+            android:id="@+id/newSemestre_btnSearch"
+            android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rechercher"/>
 
         <Button
-            android:id="@+id/newSemestre_search_btnAdd"
+            android:layout_margin="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ajouter"/>
+            android:id="@+id/newSemestre_btnCreate"
+            android:text="Créer"/>
 
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/newSemestre_tvCreate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Créer une UE"
-        android:paddingTop="10dp"
-        />
-
-    <!-- Champs pour la création d'une UE -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <EditText
-            android:id="@+id/newSemestre_create_etSigleUE"
+        <Button
+            android:layout_margin="5dp"
+            android:id="@+id/newSemestre_btnDel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"
-            android:hint="Sigle de l'UE"/>
-
-        <Spinner
-            android:id="@+id/newSemestre_create_spinnerTypeUE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <EditText
-            android:id="@+id/newSemestre_create_etCreditsUE"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="10dp"
-            android:hint="Credits de l'UE"/>
-
-        <Spinner
-            android:id="@+id/newSemestre_create_spinnerBranche"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:text="Supprimer"/>
 
     </LinearLayout>
 
     <!-- Bouton créer et ajouter -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center">
 
         <Button
+            android:layout_margin="5dp"
+            android:id="@+id/newSemestre_btnAdd"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/newSemestre_create_buttonCreate"
-            android:text="Créer et ajouter"/>
+            android:text="Ajouter"/>
 
+        <Button
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/newSemestre_btnReset"
+            android:text="Réinitialiser"/>
 
+        <Button
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/newSemestre_btnRemove"
+            android:text="Enlever"/>
     </LinearLayout>
 
 </LinearLayout>
