--- a/app/src/main/res/layout/activity_new_cursus.xml
+++ b/app/src/main/res/layout/activity_new_cursus.xml
@@ -3,14 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ViewModels.NewCursusActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/newCursus_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="50dp" />
+        android:layout_height="wrap_content"/>
 
     <Button
         android:id="@+id/newCursus_addButton"
@@ -20,6 +19,14 @@
         android:layout_centerHorizontal="true"
         android:text="Ajouter un nouveau semestre" />
 
+
+    <Button
+        android:id="@+id/newCursus_refreshButton"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/newCursus_addButton"
+        android:layout_centerHorizontal="true"
+        android:text="Rafraichir" />
 
 
 </RelativeLayout>
