[CursUTT] Tout marche, c'est fou

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="50dp" />
+        android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/main_addButton"
