--- a/app/src/main/res/layout/cursus_item.xml
+++ b/app/src/main/res/layout/cursus_item.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:onClick="visualize"
     android:layout_height="wrap_content">
 
     <TextView
@@ -17,5 +18,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cursus_btnOpen"
+            android:text="Visualiser"/>
+
+        <Button
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cursus_btnClone"
+            android:text="Dupliquer"/>
+
+        <Button
+            android:layout_margin="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/cursus_btnDelete"
+            android:text="Supprimer"/>
+
+    </LinearLayout>
 
 </LinearLayout>
