--- a/app/src/main/res/layout/activity_new_semestre.xml
+++ b/app/src/main/res/layout/activity_new_semestre.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
@@ -7,6 +7,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ViewModels.NewSemestreActivity">
+
+    <LinearLayout android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:orientation="vertical">
+
 
     <TextView
         android:id="@+id/newSemestre_tvSearch"
@@ -82,8 +87,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/newSemestre_recyclerSearchResult"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content"/>
 
     <!-- Bouton créer et ajouter -->
     <LinearLayout
@@ -218,7 +222,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="335dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:gravity="center">
 
         <EditText
@@ -236,4 +241,6 @@
 
     </LinearLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
